<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiveFeedback">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="28dp"
                android:text="@string/give_feedback_title"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck">

            </TextView>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="28dp"
                android:padding="10dp"
                android:text="@string/give_feedback_subtitle"
                android:textColor="#4C6F7C"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <!-- Feedback EditText -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/give_feedback_textView"
                android:textStyle="bold"
                android:textSize="20sp">

            </TextView>
            <EditText
                android:id="@+id/feedbackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/give_feedback_editText"
                android:inputType="textMultiLine"
                android:padding="40dp"
                android:textSize="16sp" />

            <!-- RatingBar -->
            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1" />

            <!-- Submit Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitFeedbackButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:text="@string/submit_feedback"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:padding="10dp"
                app:backgroundTint="#FF5722"
                app:rippleColor="@color/yellow"
                app:background="@drawable/button_bg" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>