<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/welcomeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="28dp"
                        android:text="@string/welcomeText"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="28dp"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>


                <TextView
                    android:id="@+id/greetUser"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="28dp"
                    android:padding="10dp"
                    android:text="@string/home_fragment_subtitle"
                    android:textColor="#4C6F7C"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </LinearLayout>

        <!-- Add ViewPager for sliding images -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top"
            tools:ignore="SpeakableTextPresentCheck" />

        <!-- Add About Us section -->
        <androidx.cardview.widget.CardView
            android:id="@+id/aboutUsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/viewPager">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Title -->
                <TextView
                    android:id="@+id/aboutUsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/about_us_title"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!-- Subtitle -->
                <TextView
                    android:id="@+id/aboutUsSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:text="@string/about_us_subtitle"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />

                <!-- Paragraph -->
                <TextView
                    android:id="@+id/aboutUsParagraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/about_us_paragraph"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Divider Line -->
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerHorizontal"
            app:layout_constraintTop_toBottomOf="@+id/aboutUsCard" />

        <!-- Footer Text or Copyright Information -->
        <TextView
            android:id="@+id/footerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/footer_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>